[FORMAT] format code